--- a/transcriptor.html
+++ b/transcriptor.html
@@ -45,7 +45,7 @@
     </style>
 </head>
 <body>
-    <div class="container">
+    <div className="container">
         <h1>Contrôle de l'API de Transcription</h1>
         <button onclick="startRecording()">Démarrer l'enregistrement</button>
         <button onclick="stopRecording()">Arrêter l'enregistrement</button>
